# virtual_human_MolE

mole_package/: README.md  pyproject.toml  sequences.smiles
mole_package/src/mole_package/: __init__.py  data_representation.py  dataset_representation.py  dataset_representation_old.py  ginet_concat.py  mole_antimicrobial_prediction.py  mole_representation.py
